--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
@@ -15,7 +15,8 @@
 
     .button {
         ::ng-deep {
-            .link {
+            .link,
+            .button {
                 height: 50px;
 
                 @include mobile {
@@ -74,6 +75,25 @@
 
         @include tablet {
             margin-bottom: 54px;
+        }
+    }
+}
+
+.form-fields {
+    width: 100%;
+    @include mobile {
+        margin-top: 33px;
+
+        .field-container {
+            margin-top: 17px;
+            padding: 0px 1px;
+        }
+    }
+
+    @include tablet {
+        margin-top: 24px;
+        .field-container {
+            margin-top: 39px;
         }
     }
 }
